--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
         <div class="logo">
           <i class="fas fa-heart"></i>
         </div>
-        <h1>Our Love Journey</h1>
-        <p class="subtitle">
-          Celebrating every moment, every memory, and every heartbeat together
-        </p>
+        <h1>Happy Anniversary</h1>
+        <p class="subtitle">Terima kasih telah berjalan sejauh ini bersamaku</p>
 
         <div class="stats">
           <div class="stat-card">
@@ -35,15 +33,21 @@
             <div class="stat-label">Love & Happiness</div>
           </div>
         </div>
+        <button id="music-btn">
+          <i class="fas fa-music"></i>
+        </button>
+
+        <audio id="bg-music" loop>
+          <source src="audio/audio.mpeg" type="audio/mpeg" />
+        </audio>
       </header>
 
       <div class="message-section">
         <h2>To My Forever Love</h2>
         <p class="message">
-          Every day with you feels like a beautiful dream that I never want to
-          wake up from. From our first hello to countless adventures together,
-          you've made my life brighter than I ever imagined. Here's to us, to
-          our past, present, and all the beautiful moments yet to come.
+          Setiap momen bersamamu selalu punya arti. Dari awal pertemuan hingga
+          hari ini, kita telah melewati banyak cerita bersama. Dan semoga cerita
+          ini terus berjalan tanpa akhir.
         </p>
         <div class="hearts">
           <div class="heart">♡</div>
