--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
       </div>
 
       <div class="gallery" id="photoGallery">
-        <!-- Photos will be dynamically added here -->
       </div>
 
       <footer>
-        <p>Made with love ❤️ | Our Anniversary Celebration</p>
+        <p>Made with love ❤️</p>
       </footer>
     </div>
 
